@@ -1,48 +1,39 @@
 package energy.eddie.regionconnector.fr.enedis.providers.v0;
 
-import energy.eddie.regionconnector.fr.enedis.model.ConsumptionLoadCurveIntervalReading;
-import energy.eddie.regionconnector.fr.enedis.model.ConsumptionLoadCurveMeterReading;
-import energy.eddie.regionconnector.fr.enedis.providers.agnostic.IdentifiableMeterReading;
+import energy.eddie.api.agnostic.Granularity;
+import energy.eddie.regionconnector.fr.enedis.dto.IntervalReading;
+import energy.eddie.regionconnector.fr.enedis.dto.MeterReading;
+import energy.eddie.regionconnector.fr.enedis.permission.request.api.FrEnedisPermissionRequest;
+import energy.eddie.regionconnector.fr.enedis.providers.IdentifiableMeterReading;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
+import org.junit.jupiter.params.provider.EnumSource;
 
+import java.time.LocalDate;
 import java.time.ZoneOffset;
-import java.time.ZonedDateTime;
-import java.time.format.DateTimeFormatter;
 import java.util.List;
-import java.util.stream.Stream;
+import java.util.Optional;
 
 import static energy.eddie.api.v0.ConsumptionPoint.MeteringType.MEASURED_VALUE;
-import static energy.eddie.regionconnector.fr.enedis.model.ConsumptionLoadCurveIntervalReading.IntervalLengthEnum.*;
-import static energy.eddie.regionconnector.fr.enedis.model.ConsumptionLoadCurveIntervalReading.MeasureTypeEnum.B;
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 class IntermediateConsumptionRecordTest {
-    public static Stream<Arguments> testConsumptionRecord_withIntervalsAndMeasurementTypes() {
-        return Stream.of(
-                Arguments.of(PT5M, "PT5M"),
-                Arguments.of(PT10M, "PT10M"),
-                Arguments.of(PT15M, "PT15M"),
-                Arguments.of(PT30M, "PT30M"),
-                Arguments.of(PT60M, "PT60M")
-        );
-    }
 
     @ParameterizedTest
-    @MethodSource
-    void testConsumptionRecord_withIntervalsAndMeasurementTypes(ConsumptionLoadCurveIntervalReading.IntervalLengthEnum interval, String duration) {
+    @EnumSource(Granularity.class)
+    void testConsumptionRecord_withIntervalsAndMeasurementTypes(Granularity intervalLength) {
         // Given
-        var intervalReading = new ConsumptionLoadCurveIntervalReading();
-        intervalReading.setIntervalLength(interval);
-        intervalReading.setValue("100");
-        intervalReading.setMeasureType(B);
-        var clcMeterReading = new ConsumptionLoadCurveMeterReading();
-        clcMeterReading.setUsagePointId("uid");
-        clcMeterReading.setStart(ZonedDateTime.now(ZoneOffset.UTC).format(DateTimeFormatter.ISO_DATE));
-        var meterReading = new IdentifiableMeterReading("pid", "cid", "dnid", clcMeterReading);
-        clcMeterReading.setIntervalReading(List.of(intervalReading));
+        var intervalReading = new IntervalReading("100", "2024-02-26 00:30:00", Optional.of("B"), Optional.of(intervalLength.name()));
+        var clcMeterReading = new MeterReading("uid", LocalDate.now(ZoneOffset.UTC), LocalDate.now(ZoneOffset.UTC), "BRUT", null, List.of(intervalReading));
+        var permissionRequest = mock(FrEnedisPermissionRequest.class);
+        when(permissionRequest.connectionId()).thenReturn("cid");
+        when(permissionRequest.permissionId()).thenReturn("pid");
+        when(permissionRequest.dataNeedId()).thenReturn("dnid");
+        when(permissionRequest.granularity()).thenReturn(intervalLength);
+
+        var meterReading = new IdentifiableMeterReading(permissionRequest, clcMeterReading);
         var intermediateRecord = new IntermediateConsumptionRecord(meterReading);
 
         // When
@@ -54,22 +45,25 @@ class IntermediateConsumptionRecordTest {
                 () -> assertEquals("cid", result.getConnectionId()),
                 () -> assertEquals("dnid", result.getDataNeedId()),
                 () -> assertEquals(1, result.getConsumptionPoints().size()),
-                () -> assertEquals(100, result.getConsumptionPoints().get(0).getConsumption()),
-                () -> assertEquals(MEASURED_VALUE, result.getConsumptionPoints().get(0).getMeteringType()),
-                () -> assertEquals(duration, result.getMeteringInterval().toString())
+                () -> assertEquals(100, result.getConsumptionPoints().getFirst().getConsumption()),
+                () -> assertEquals(MEASURED_VALUE, result.getConsumptionPoints().getFirst().getMeteringType()),
+                () -> assertEquals(intervalLength.name(), result.getMeteringInterval())
         );
     }
 
     @Test
     void testConsumptionRecord_withEmptyIntervalReading() {
         // Given
-        var clcMeterReading = new ConsumptionLoadCurveMeterReading();
-        clcMeterReading.setIntervalReading(List.of());
-        var meterReading = new IdentifiableMeterReading("pid", "cid", "dnid", clcMeterReading);
+        var clcMeterReading = new MeterReading("uid", LocalDate.now(ZoneOffset.UTC), LocalDate.now(ZoneOffset.UTC), "BRUT", null, List.of());
+        var permissionRequest = mock(FrEnedisPermissionRequest.class);
+        when(permissionRequest.connectionId()).thenReturn("cid");
+        when(permissionRequest.permissionId()).thenReturn("pid");
+        when(permissionRequest.dataNeedId()).thenReturn("dnid");
+
+        var meterReading = new IdentifiableMeterReading(permissionRequest, clcMeterReading);
         var intermediateRecord = new IntermediateConsumptionRecord(meterReading);
 
         // When, Then
         assertThrows(IllegalStateException.class, intermediateRecord::consumptionRecord);
     }
-
 }
